2006-09-22  Masatake YAMATO  <jet@gyve.org>

	* add-log.el (add-log-current-defun): Use `forward-sexp'
	instead of `forward-word' to pick c++::symbol.
	Reported by Herbert Euler <herberteuler@hotmail.com>.

2006-09-22  Kenichi Handa  <handa@m17n.org>

	* bindings.el: Fix setting self-insert-command for multibyte
	characters in global-map.

2006-09-21  David Kastrup  <dak@gnu.org>

	* mouse.el (mouse-posn-property): Fix typo for `event-start' in
	doc string.

2006-09-21  Kim F. Storm  <storm@cua.dk>

	* emacs-lisp/cl.el (pushnew-internal): Remove defvar.
	(pushnew): Fix last change.

2006-09-21  Kenichi Handa  <handa@m17n.org>

	* language/european.el ("Latin-1"): Add windows-1252 to
	coding-priority.
	("German"): Likewise.

2006-09-21  Kim F. Storm  <storm@cua.dk>

	* emacs-lisp/cl-macs.el (member*): Use memql instead of complex code.
	Suggested by Miles Bader.

	* emacs-lisp/cl.el (pushnew): Rework 2006-09-10 change.  Use memql
	instead of add-to-list in the simple case.

2006-09-20  Kenichi Handa  <handa@m17n.org>

	* isearch.el (isearch-process-search-char): Cancel the previous
	change.
	(isearch-search-string): New function.
	(isearch-search): Use isearch-search-string.
	(isearch-lazy-highlight-search): Likewise.

2006-09-20  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* lpr.el (lpr-page-header-switches): Insert `*' at beginning of comment
	to become an option.

2006-09-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (find-buffer-visiting): Don't get fooled by a nil inode.

2006-09-20  Kim F. Storm  <storm@cua.dk>

	* simple.el (line-move-partial): Call pos-visible-in-window-p with
	position t instead of trying both window-end and window-end - 1.

2006-09-20  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-scan-tags): Find end of subtrees also in
	hidden trees.

2006-09-20  David Kastrup  <dak@gnu.org>

	* mouse.el (mouse-posn-property): Improve doc string.
	(mouse-on-link-p): Change buffers for function calls on links.
