@@ -1,3 +1,8 @@
+2006-09-22  Chong Yidong  <cyd@stupidchicken.com>
+
+	* files.el (save-some-buffers-action-alist): Display diff in
+	view-mode.
+
 2006-09-22  Masatake YAMATO  <jet@gyve.org>
 
 	* add-log.el (add-log-current-defun): Use `forward-sexp'
